--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap and CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="static/styles.css">
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 576 512'%3E%3Cpath d='M183.1 235.3c33.7 20.7 62.9 48.1 85.8 80.5c7 9.9 13.4 20.3 19.1 31c5.7-10.8 12.1-21.1 19.1-31c22.9-32.4 52.1-59.8 85.8-80.5C437.6 207.8 490.1 192 546 192h9.9c11.1 0 20.1 9 20.1 20.1C576 360.1 456.1 480 308.1 480H288 267.9C119.9 480 0 360.1 0 212.1C0 201 9 192 20.1 192H30c55.9 0 108.4 15.8 153.1 43.3zM301.5 37.6c15.7 16.9 61.1 71.8 84.4 164.6c-38 21.6-71.4 50.8-97.9 85.6c-26.5-34.8-59.9-63.9-97.9-85.6c23.2-92.8 68.6-147.7 84.4-164.6C278 33.9 282.9 32 288 32s10 1.9 13.5 5.6z' fill='%230bb10e' /%3E%3C/svg%3E" type="image/svg+xml">
 
 
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="image-container">
-                    <img src="{{ url_for('static', filename='img/Background.jpg') }}" alt="Massage Image">
+                    <img src="static/img/Background.jpg" alt="Massage Image">
 
                     <div class="overlay">
                         <h2>Your Destination for Relaxation & Wellbeing</h2>
@@ -148,7 +148,7 @@
             <!-- Service 1 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="{{ url_for('static', filename='img/Swedish Massage.jpeg') }}" class="card-img-top" alt="Service 1">
+                    <img src="static/img/Swedish Massage.jpeg" class="card-img-top" alt="Service 1">
     
                     <div class="card-body">
                         <h5 class="card-title">Swedish Massage</h5>
@@ -159,7 +159,7 @@
             <!-- Service 2 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="{{ url_for('static', filename='img/Deep Tissue Massage.jpg') }}" class="card-img-top" alt="Service 2">
+                    <img src="static/img/Deep Tissue Massage.jpg" class="card-img-top" alt="Service 2">
                     <div class="card-body">
                         <h5 class="card-title">Deep Tissue Massage</h5>
                         <p class="card-text">Experience relief from muscle tension and chronic pain with our deep tissue massage.</p>
@@ -169,7 +169,7 @@
             <!-- Service 3 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="{{ url_for('static', filename='img/Hot Stone Massage.jpg') }}" class="card-img-top" alt="Service 3">
+                    <img src="static/img/Hot Stone Massage.jpg" class="card-img-top" alt="Service 3">
 
                     <div class="card-body">
                         <h5 class="card-title">Hot Stone Massage</h5>
@@ -180,7 +180,7 @@
             <!-- Service 4 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="{{ url_for('static', filename='img/Relaxation Aromatherapy.jpg') }}" class="card-img-top" alt="Service 4">
+                    <img src="static/img/Relaxation Aromatherapy.jpg" class="card-img-top" alt="Service 4">
 
                     <div class="card-body">
                         <h5 class="card-title">Relaxation Aromatherapy</h5>
@@ -221,7 +221,7 @@
                 <div class="card mb-4 testimonial-card">
                     <div class="card-body">
                         <div class="testimonial-author-img">
-                            <img src="{{ url_for('static', filename='img/Sarah.jpg') }}" class="card-img-top" alt="Sarah's Photo">
+                            <img src="static/img/Sarah.jpg" class="card-img-top" alt="Sarah's Photo">
 
                         </div>
                         <div class="testimonial-content">
@@ -243,7 +243,7 @@
                 <div class="card mb-4 testimonial-card">
                     <div class="card-body">
                         <div class="testimonial-author-img">
-                            <img src="{{ url_for('static', filename='img/john.jpg') }}" class="card-img-top" alt="John's Photo">
+                            <img src="static/img/john.jpg" class="card-img-top" alt="John's Photo">
 
                         </div>
                         <div class="testimonial-content">
@@ -265,7 +265,7 @@
                 <div class="card mb-4 testimonial-card">
                     <div class="card-body">
                         <div class="testimonial-author-img">
-                            <img src="{{ url_for('static', filename='img/emily.jpg') }}" class="card-img-top" alt="Emily's Photo">
+                            <img src="static/img/emily.jpg" class="card-img-top" alt="Emily's Photo">
 
                         </div>
                         <div class="testimonial-content">
