problems with images

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <!-- Service 1 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="static/img/Swedish Massage.jpeg" class="card-img-top" alt="Service 1">
+                    <img src="static/img/SwedishMassage.jpeg" class="card-img-top" alt="Service 1">
     
                     <div class="card-body">
                         <h5 class="card-title">Swedish Massage</h5>
@@ -159,7 +159,7 @@
             <!-- Service 2 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="static/img/Deep Tissue Massage.jpg" class="card-img-top" alt="Service 2">
+                    <img src="static/img/DeepTissueMassage.jpg" class="card-img-top" alt="Service 2">
                     <div class="card-body">
                         <h5 class="card-title">Deep Tissue Massage</h5>
                         <p class="card-text">Experience relief from muscle tension and chronic pain with our deep tissue massage.</p>
@@ -169,7 +169,7 @@
             <!-- Service 3 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="static/img/Hot Stone Massage.jpg" class="card-img-top" alt="Service 3">
+                    <img src="static/img/HotStoneMassage.jpg" class="card-img-top" alt="Service 3">
 
                     <div class="card-body">
                         <h5 class="card-title">Hot Stone Massage</h5>
@@ -180,7 +180,7 @@
             <!-- Service 4 -->
             <div class="col-md-3">
                 <div class="card mb-4 service-card">
-                    <img src="static/img/Relaxation Aromatherapy.jpg" class="card-img-top" alt="Service 4">
+                    <img src="static/img/RelaxationAromatherapy.jpg" class="card-img-top" alt="Service 4">
 
                     <div class="card-body">
                         <h5 class="card-title">Relaxation Aromatherapy</h5>
